@@ -53,5 +53,6 @@ struct _MrpApplicationClass {
 GType            mrp_application_get_type      (void) G_GNUC_CONST;
 
 MrpApplication * mrp_application_new           (void);
+gulong           mrp_application_get_unique_id (void);
 
 #endif /* __MRP_APPLICATION_H__ */
